# trident

./: .cursorrules  README.md  index.html  package.json  pnpm-lock.yaml  vercel-build-helper.sh  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  syntax.ts  trident-core.d.ts
src/components/diagram/: DiagramCanvas.css  DiagramCanvas.tsx  DiagramGroup.css  DiagramGroup.tsx  DiagramNode.css  DiagramNode.tsx  EdgeOverlay.tsx  SVGEdges.tsx  SVGGroup.tsx  SVGNode.tsx  SVGShapeNode.tsx
src/components/editor/: CodeEditor.tsx  Toolbar.css  Toolbar.tsx
src/components/layout/: SplitPane.css  SplitPane.tsx
src/hooks/: useDiagramDrag.ts  useTheme.tsx
src/types/: arrows.ts  diagram.ts
src/utils/: geometry.ts
trident-core/: Cargo.toml  LICENSE
trident-core/src/: lib.rs  output.rs  wasm.rs
trident-core/src/layout/: adjacency.rs  force_placement.rs  mod.rs  placement.rs  radial_placement.rs  spatial_grid.rs
trident-core/src/layout/algorithms/: constrained.rs  graph_driven.rs  grid.rs  mod.rs  radial.rs
trident-core/src/parser/: ast.rs  codegen.rs  compile.rs  mod.rs  rename.rs  types.rs  update.rs
