[package]
name = "trident-core"
version = "0.1.0"
edition = "2024"
description = "Trident core"
license = "none"
repository = "github.com/alvesvaren/trident"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.106"


[dependencies.web-sys]
version = "0.3.83"
features = [
  'Document', 
  'Window', 
  'HtmlCanvasElement' ,
  'WebGlRenderingContext', 
  'WebGl2RenderingContext', 
  'WebGlProgram', 
  'WebGlShader', 
  'WebGlBuffer', 
  'WebGlUniformLocation'
]
